# docs/swagger.json
@@ -170,6 +170,42 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete a driver from the database based on its ID.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver"
+                ],
+                "summary": "Delete a driver",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Driver ID",
+                        "name": "driverID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Driver deleted successfully",
+                        "schema": {
+                            "$ref": "#/definitions/controller.DriverServerResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controller.DriverServerResponse"
+                        }
+                    }
+                }
             }
         }
     },
